Dcms-Social v1.9.9 next

--- a/sys/dat/default.ini
+++ b/sys/dat/default.ini
@@ -4,7 +4,7 @@
 ;версия движка
 dcms_version=1.9.9;
 ;статус версии
-dcms_state=beta;
+dcms_state=next;
 
 ; при переносе сайта можно прописать параметры базы тут (убрав ";" в начале строк)
 ; после этого необходимо будет пересохранить настройки системы в админке,
